--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -22,15 +22,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Step 1: Check out code from repository
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Step 2: Login to ACR
+      -
+        name: Login to ACR
+        uses: docker/login-action@v3
+        with:
+          registry: judevops.azurecr.io
+          username: ${{ DevOpsToken }}
+          password: ${{ sRDjWN7B46Al87avq8h6aCE4B460TKNQhMHqXDVm/d/+ACRD6tjEa }}
+      # Step 3: Build and push docker image
+      - name: Build and push Docker image
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build -t benny_truong-calculator:1.0 .
+          docker push judevops.azurecr.io/benny_truong-calculator
