--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -31,8 +31,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: judevops.azurecr.io
-          username: ${{ DevOpsToken }}
-          password: ${{ sRDjWN7B46Al87avq8h6aCE4B460TKNQhMHqXDVm/d/+ACRD6tjEa }}
+          username: ${{ ASSIGNMENT_USERNAME }}
+          password: ${{ ASSIGNMENT_PASSWORD }}
       # Step 3: Build and push docker image
       - name: Build and push Docker image
         run: |
