--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t benny_truong-calculator:1.0 .
-          docker tag benny_truong-calculator judevops.azurecr.io/benny_truong-calculator
+          docker tag benny_truong-calculator:1.0 judevops.azurecr.io/benny_truong-calculator
           docker push judevops.azurecr.io/benny_truong-calculator
