--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12-slim
 WORKDIR /app
-COPY BE .
+COPY . .
 RUN pip install -r requirements.txt
 #Workdir rad 2, COPY BE .
 ENTRYPOINT [ "python", "calculator.py" ]
