--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -34,6 +34,12 @@ jobs:
           username: ${{ secrets.ASSIGNMENT_USERNAME }}
           password: ${{ secrets.ASSIGNMENT_PASSWORD }}
 
+      # install dependencies
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+
       # Step 3: Build and push docker image
       - name: Build and push Docker image
         run: |
@@ -46,7 +52,7 @@ jobs:
           nohup python BE/calculator.py --rest &
 
       # Step 5: Build & test run
-      - name: Build and Run Tests
+      - name: Buid and Run Tests
         run: |
           # Execute your tests generating results
           pytest --junitxml=report.xml
