--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -34,6 +34,11 @@ jobs:
           username: ${{ secrets.ASSIGNMENT_USERNAME }}
           password: ${{ secrets.ASSIGNMENT_PASSWORD }}
 
+      #Install dependencies
+      - name: Install Dependencies
+        run: |
+          pip install -r ./BE/requirements.txt
+
       # Step 3: Build and push docker image
       - name: Build and push Docker image
         run: |
@@ -48,14 +53,13 @@ jobs:
       # Step 5: Build & test run
       - name: Buid and Run Tests
         run: |
-          # Execute your tests generating results
-          pytest --junitxml=report.xml
+          pytest --junit-xml=report.xml
       
       # Step 6: Publish test report
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v4
         if: success() || failure() # Always run even if the previous step fails
         with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+          report_paths: 'C:\Users\benny\Desktop\DevopsAssignment\devops-assignment-trbe22nl1\BE\Report'
 
 
