--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -52,7 +52,7 @@ jobs:
       
       - name: Set PYTHONPATH
         run: |
-          echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+          echo "PYTHONPATH=$(pwd)/BE" >> $GITHUB_ENV
 
       # Step 5: Build & test run
       - name: Buid and Run Tests
