--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -64,6 +64,6 @@ jobs:
         uses: mikepenz/action-junit-report@v4
         if: success() || failure() # Always run even if the previous step fails
         with:
-          report_paths: '/home/runner/work/DevOps/DevOps/report.xml'
+          report_paths: '**/build/test-results/test/TEST-*.xml'
 
 
